<resources>
    <string name="app_name">BookBank</string>
    <string name="title_activity_search_books">SearchBooksActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--    Navigation-->
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_my_books">My Books</string>
    <string name="menu_borrowed_books">Borrowed Books</string>
    <string name="menu_search_books">Search Books</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_search_users">Search Users</string>
    <string name="menu_my_requests">My Requests</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="sign_out">Sign Out</string>
    <string name="my_requests">My Requests</string>
    <string name="search_users">Search Users</string>
    <string name="notifications">Notifications</string>
    <string name="search_books">Search Books</string>
    <string name="borrowed_books">Borrowed Books</string>
    <string name="my_books">My Books</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_set_location">Map</string>

    <string-array name="bookStatus">
        <item>Show All</item>
        <item>Available</item>
        <item>Borrowed</item>
        <item>Requested</item>
        <item>Accepted</item>
    </string-array>

    <string-array name="bookStatusBorrower">
        <item>Show All</item>
        <item>Borrowed</item>
        <item>Requested</item>
        <item>Accepted</item>
    </string-array>

</resources>