<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_profile" />
        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_my_books" />
        <item
            android:id="@+id/nav_borrowed_books"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_borrowed_books" />
        <item
            android:id="@+id/nav_search_books"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_search_books" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_search_users"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_search_users" />
        <item
            android:id="@+id/nav_my_requests"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_requests" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sign_out" />
    </group>
</menu>