<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1dd7de"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f7b42d"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:src="@drawable/ic_baseline_person_82" />

        <TextView
            android:id="@+id/drawer_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/drawer_my_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/my_profile"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/drawer_my_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/my_books"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/drawer_borrowed_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/borrowed_books"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/drawer_search_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/search_books"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/drawer_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/notifications"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/drawer_search_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/search_users"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/drawer_my_requests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/my_requests"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/drawer_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sign_out"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>